<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search_button1"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="Search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item android:id="@+id/search_buttoneeeee"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="Search"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <item
                android:id="@+id/action_dropdown1"
                android:title="@string/filter1" />
            <item
                android:id="@+id/action_dropdown2"
                android:title="@string/filter2" />
            <item
                android:id="@+id/action_dropdown3"
                android:title="@string/filter3" />
            <item
                android:id="@+id/action_dropdown4"
                android:title="@string/filter4" />
        </menu>
    </item>

</menu>